src/global.scss
@import "~@ionic/angular/css/core.css";
@import "~@ionic/angular/css/normalize.css";
@import "~@ionic/angular/css/structure.css";
@import "~@ionic/angular/css/typography.css";
@import '~@ionic/angular/css/display.css';
@import "~@ionic/angular/css/padding.css";
@import "~@ionic/angular/css/float-elements.css";
@import "~@ionic/angular/css/text-alignment.css";
@import "~@ionic/angular/css/text-transformation.css";
@import "~@ionic/angular/css/flex-utils.css";
@import "https://unpkg.com/open-props";
@import "https://unpkg.com/open-props/buttons.min.css";
@import "https://unpkg.com/open-props/buttons.dark.min.css";
@import "https://unpkg.com/open-props/buttons.light.min.css";
@import "https://unpkg.com/open-props/indigo.min.css";
@import "https://unpkg.com/open-props/indigo-hsl.min.css";
@import "https://unpkg.com/open-props/easings.min.css";
@import "https://unpkg.com/open-props/animations.min.css";
@import "https://unpkg.com/open-props/sizes.min.css";
@import "https://unpkg.com/open-props/gradients.min.css";
@import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";

ion-card{
  height: 100%;
  max-height: 100vh;
  max-width: 82vw;
}

ion-note{
  margin-bottom: 5px !important;
}

ion-app{
  max-width: 100vw;
  max-height: 100vh;
}

app-job-card{
  max-width: 100%;
}

